deploy/openshift/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hawtio-online
spec:
  template:
    spec:
      containers:
        - name: hawtio-online
          volumeMounts:
            - name: hawtio-online-tls-serving
              mountPath: /etc/tls/private/serving
            - name: hawtio-online-tls-proxying
              mountPath: /etc/tls/private/proxying
      volumes:
        - name: hawtio-online-tls-serving
          secret:
            secretName: hawtio-online-tls-serving
        - name: hawtio-online-tls-proxying
          secret:
            secretName: hawtio-online-tls-proxying
