deploy/openshift/patch-service.yml
apiVersion: v1
kind: Service
metadata:
  name: hawtio-online
  namespace: hawtio
  annotations:
    service.beta.openshift.io/serving-cert-secret-name: hawtio-online-tls-serving
