deploy/openshift/delete-ingress.yml
$patch: delete
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hawtio-online
